Fixed image sizing being too big 2

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -161,7 +161,7 @@ main {
 }
 
 .frame img {
-  max-height: 80vh;
+  max-height: 75vh;
   height: auto;
   max-width: 100%;
 }
