--- a/resources/sass/_frames.sass
+++ b/resources/sass/_frames.sass
@@ -46,6 +46,6 @@
 		height: fit-content
 
 	img
-		max-height: 80vh
+		max-height: 75vh
 		height: auto
 		max-width: 100%
